# Gem-Immo

./: README.md
gemma-immo-saas/: README.md  docker-compose.yml  download_dvf_31.py  scrape_dvf_haute_garonne.py  update.md
gemma-immo-saas/Scraper DVF/: download_dvf_31.py  scrape_dvf_haute_garonne.py
gemma-immo-saas/apps/api/: Dockerfile  pyproject.toml
gemma-immo-saas/apps/api/app/: config.py  main.py  schemas.py
gemma-immo-saas/apps/api/app/data/: prix_immo.csv  resultats.csv  resultats.sample.csv
gemma-immo-saas/apps/api/app/routers/: opportunities.py
gemma-immo-saas/apps/api/app/services/: dvf_market.py  filters.py  repository.py  scoring.py
gemma-immo-saas/apps/api/gemma_immo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gemma-immo-saas/apps/api/scripts/: run_analysis.py
gemma-immo-saas/apps/web/: package.json
gemma-immo-saas/apps/web/app/: globals.css  layout.tsx  page.tsx
gemma-immo-saas/apps/web/lib/: api.ts
gemma-immo-saas/bieniciscraper-main/: README.md  demo.csv  main.py  scrape_all.py
gemma-immo-saas/bieniciscraper-main/bieniciscraper/: constants.py  scraper.py
gemma-immo-saas/bieniciscraper-main/data/: resultats.csv
gemma-immo-saas/bieniciscraper-main/tmp_slices/: slice_01_0_100000.csv
gemma-immo-saas/docs/: ROADMAP_SAAS.md
